--- a/Triss.html
+++ b/Triss.html
@@ -7,15 +7,13 @@
 		<!--Указываем фон для страницы-->
 		<!--Создаем рамку для нашей картинки, указываем ёё размер и цвет-->
 		<style>
-    	    h1{text-align:center;} 
-            h3{text-align:center;}
             body{background-image:url("https://steamcdn-a.akamaihd.net/steamcommunity/public/images/items/292030/dd3ea93fef58d98d2c43dbed7489d0fb40d1d9db.jpg");} 
 			img {border: 3px solid #FFFFE0;}. 
         </style>
 	</head>
 	<body>
-		<h1><font color="white" face="century gothic">Трисс Меригольд</h1>
-		<h3><p>" Весёлая Трисс Меригольд с каштановыми волосами, хохочущая по любому поводу и выглядевшая как девчонка. <br>Он любил ее. И она его тоже "</p></h3>
+		<h1><font color="white" face="century gothic"><center>Трисс Меригольд</center></h1>
+		<h3><p><center>" Весёлая Трисс Меригольд с каштановыми волосами, хохочущая по любому поводу и выглядевшая как девчонка. <br>Он любил ее. И она его тоже "</center></p></h3>
 		<p><b>Трисс Меригольд </b> — чародейка, бывшая любовница <a href="index.html" target="_blank" style="color:#FF4500"><b>Геральта</b>.</a>, 
 		а также лучшая подруга <a href="Yen.html" target="_blank" style="color:#FF4500"><b>Йеннифэр</b></a>, <a href="Ciri.html" target="_blank" style="color:#FF4500"><b>Цири</b></a> и <a href="Witcher.html" target="_blank" style="color:#FF4500" ><b>ведьмаков</b></a> из Каэр Морхена. 
 		<br>Одна из самых молодых, но вместе с тем самых талантливых чародеек Севера.
