--- a/Witcher.html
+++ b/Witcher.html
@@ -7,16 +7,14 @@
 		<!--Указываем фон для страницы-->
 		<!--Создаем рамку для нашей картинки, указываем ёё размер и цвет-->
 		<style>
-    	    h1{text-align:center;} 
-            h3{text-align:center;}
             body{background-image:url("https://cdn.statically.io/img/www.tokkoro.com/picsup/5075065-fire-geralt-of-rivia-sword-the-witcher-3-wild-hunt-warrior-white-hair.jpg");} 
 			img {border: 3px solid #FFFFE0;}. 
         </style>
 	</head>
 	<body>
-		<h1><font color="white" face="century gothic">Ведьмак</h1>
-		<h3><p>" —Храбрый, видать, раз два меча навесил.
-		<br> Ты, <a href="index.html" target="_blank" style="color:#FFD700" >седой</a>! На кой тебе два меча? Скажешь, кто ты такой есть, или тебе язык ножом развязать?<br>—Ведьмак. Спрашиваешь, зачем мне два меча? <br>Один — для чудовищ, другой — для людей. "</p></h3>
+		<h1><font color="white" face="century gothic"><center>Ведьмак</center></h1>
+		<h3><p><center>" —Храбрый, видать, раз два меча навесил.
+		<br> Ты, <a href="index.html" target="_blank" style="color:#FFD700" >седой</a>! На кой тебе два меча? Скажешь, кто ты такой есть, или тебе язык ножом развязать?<br>—Ведьмак. Спрашиваешь, зачем мне два меча? <br>Один — для чудовищ, другой — для людей. "</center></p></h3>
 		<p><b>Ведьмаки</b> —искусственно созданные мутанты, прошедшие специальную подготовку и обладающие сверхъестественными способностями и возможностями,<br> чье изначальное предназначение — истреблять чудовищ. Из-за инаковости ведьмаков, их необычных способностей и занятий магией, ведьмаки часто становятся изгоями,
 		<br> иногда даже объектами ненависти. Люди нуждаются в ведьмаках, и в то же время боятся их.Ведьмак редко где оказывается желанным гостем.  
 		<br>С представителями этой профессии другие люди стараются вступать в контакт лишь в случае необходимости. 
