--- a/Yen.html
+++ b/Yen.html
@@ -7,15 +7,13 @@
 		<!--Указываем фон для страницы-->
 		<!--Создаем рамку для нашей картинки, указываем ёё размер и цвет-->
 		<style>
-    	    h1{text-align:center;} 
-            h3{text-align:center;}
             body{background-image:url("https://steamcdn-a.akamaihd.net/steamcommunity/public/images/items/292030/35035e826fe8ca833efb2b50245dbc0b95417b72.jpg");} 
 			img {border: 3px solid #FFFFE0;}. 
         </style>
 	</head>
 	<body>
-		<h1><font color="white" face="century gothic">Йеннифэр из Венгерберга</h1>
-		<h3><p>" И из снов моих с утра бежишь проворно.<br>Крыжовник терпкий, сладкая сирень.<br>Хочу во сне твой видеть локон черный,<br>фиалки глаз твоих, что слез туманит тень. "</p></h3>
+		<h1><font color="white" face="century gothic"><center>Йеннифэр из Венгерберга</center></h1>
+		<h3><p><center>" И из снов моих с утра бежишь проворно.<br>Крыжовник терпкий, сладкая сирень.<br>Хочу во сне твой видеть локон черный,<br>фиалки глаз твоих, что слез туманит тень. "</center></p></h3>
 		<p><b>Йеннифэр из Венгерберга</b> — дерзкая и независимая могущественная чародейка, «любовь всей жизни» <a href="Witcher.html" target="_blank" style="color:#00BFFF"><b>ведьмака</b></a> <a href="index.html" target="_blank" style="color:#00BFFF"><b>Геральта</b></a>,
 		 подруга <a href="Triss.html" target="_blank" style="color:#00BFFF"><b>Трисс</b></a>  и приёмная мать <a href="Ciri.html" target="_blank" style="color:#00BFFF"><b>Цири</b></a>. 
 		<br>Несмотря на взаимные чувства, Геральт и Йеннифэр — полные противоположности и часто ссорятся друг с другом.</p>
