--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
 		<!--Указываем фон для страницы-->
 		<!--Создаем рамку для нашей картинки, указываем ёё размер и цвет-->
 		<style>
-    	    h1{text-align:center;} 
-            h3{text-align:center;}
-            body{background-image:url("https://steamcdn-a.akamaihd.net/steamcommunity/public/images/items/292030/34e9759c41ad208c8b701d5116be837da23bbbf0.jpg");} 
+    	    body{background-image:url("https://steamcdn-a.akamaihd.net/steamcommunity/public/images/items/292030/34e9759c41ad208c8b701d5116be837da23bbbf0.jpg");} 
 			img {border: 3px solid #FFFFE0;}. 
         </style>
 	</head>
 	<body>
-		<h1><font color="white" face="century gothic">ГЕРАЛЬТ ИЗ РИВИИ</h1>
-		<h3><p>" Зло — есть зло.<br>Меньшее, большее, среднее — всё едино, пропорции условны, а границы размыты.
-		<br>Но если приходится выбирать между одним злом и другим, я предпочитаю не выбирать вовсе. "— Геральт</p></h3>
+		<h1><font color="white" face="century gothic"><center>ГЕРАЛЬТ ИЗ РИВИИ</center></h1>
+		<h3><p><center>" Зло — есть зло.<br>Меньшее, большее, среднее — всё едино, пропорции условны, а границы размыты.
+		<br>Но если приходится выбирать между одним злом и другим, я предпочитаю не выбирать вовсе. "— Геральт</center></p></h3>
 		<p><b>Геральт из Ривии</b> — главный герой книг Анджея Сапковского и серии видеоигр, странствующий <a href="Witcher.html" target="_blank" style="color:#FFD700"><b>ведьмак</b></a> — профессиональный охотник на чудовищ, умелый боец, 
 		<br>обладающий некоторыми магическими способностями. В процессе обучения ведьмаки принимают «мутагены», делающие их сильнее, быстрее и дающие возможность
 		<br> принимать действенные, но ядовитые для простых людей алхимические зелья. Имеет романтический интерес к двум чародейкам: <a href="Yen.html" target="_blank" style="color:#FFD700"><b>Йеннифэр</b></a> и <a href="Triss.html" target="_blank" style="color:#FFD700"><b>Трисс</b>.</a> 
