--- a/Ciri.html
+++ b/Ciri.html
@@ -7,20 +7,18 @@
 		<!--Указываем фон для страницы-->
 		<!--Создаем рамку для нашей картинки, указываем ёё размер и цвет-->
 		<style>
-    	    h1{text-align:center;} 
-            h3{text-align:center;}
             body{background-image:url("https://steamcdn-a.akamaihd.net/steamcommunity/public/images/items/292030/7dd0b68fe2bca80ecdc62f4a7262353df6ed2c2c.jpg");} 
 			img {border: 3px solid #FFFFE0;}. 
         </style>
 	</head>
 	<body>
-		<h1><font color="white" face="century gothic">Цирилла</h1>
-		<h3><p>" Я знавал людей, утверждавших, будто с первой же встречи 
+		<h1><font color="white" face="century gothic"><center>Цирилла</center></h1>
+		<h3><p><center>" Я знавал людей, утверждавших, будто с первой же встречи 
 		<br> они ощущали дыхание смерти, исходящее от этой девочки.  
 		<br>Мне она показалась совершенно обыкновенной, хотя я знал,  
 		<br>что обыкновенной–то она и не была — поэтому настойчиво пытался,о
 		<br>бнаружить, почувствовать в ней необычность. Но ничего не заметил, 
-		<br>что могло стать предчувствием либо предвестником позднейших трагических событий. " </p></h3>
+		<br>что могло стать предчувствием либо предвестником позднейших трагических событий. "</center> </p></h3>
 		<p><b>Цирилла(с языка Старшей Речи – Ласточка)</b> — <a href="Witcher.html" target="_blank" style="color:#00FA9A"><b>«ведьмачка»</b></a>, приёмная дочь <a href="index.html" target="_blank" style="color:#00FA9A"><b>Геральта</b></a> 
 		, воспитывалась какое-то время под руководством <a href="Triss.html" target="_blank" style="color:#00FA9A"><b>Трисс</b>.</a> и <a href="Yen.html" target="_blank" style="color:#00FA9A" ><b>Йеннифер</b></a>. 
 		 <br>Цири проходила обучение навыкам ведьмака, и является родной дочерью нильфгаардского императора Эмгыра вар Эмрейса и наследницей трона. «Старшая Кровь», <br>текущая в её жилах, даёт Цири возможность путешествовать между мирами.</p>
