--- a/Triss.html
+++ b/Triss.html
@@ -2,8 +2,9 @@
 <html>
 	<head>
 	    <!--Указываем название вкладки-->
-		<title>Triss</title>
-		<!--Заголовоки должены быть централизованы-->
+		<title>
+			Triss
+		</title>
 		<!--Указываем фон для страницы-->
 		<!--Создаем рамку для нашей картинки, указываем ёё размер и цвет-->
 		<style>
@@ -12,38 +13,87 @@
         </style>
 	</head>
 	<body>
-		<h1><font color="white" face="century gothic"><center>Трисс Меригольд</center></h1>
-		<h3><p><center>" Весёлая Трисс Меригольд с каштановыми волосами, хохочущая по любому поводу и выглядевшая как девчонка. <br>Он любил ее. И она его тоже "</center></p></h3>
-		<p><b>Трисс Меригольд </b> — чародейка, бывшая любовница <a href="index.html" target="_blank" style="color:#FF4500"><b>Геральта</b>.</a>, 
-		а также лучшая подруга <a href="Yen.html" target="_blank" style="color:#FF4500"><b>Йеннифэр</b></a>, <a href="Ciri.html" target="_blank" style="color:#FF4500"><b>Цири</b></a> и <a href="Witcher.html" target="_blank" style="color:#FF4500" ><b>ведьмаков</b></a> из Каэр Морхена. 
-		<br>Одна из самых молодых, но вместе с тем самых талантливых чародеек Севера.
-		<br><br>
+		<!--Используем 2 тега для заголовков разных размеров-->
+		<!--Задаём белый цвет всему тексту и шрифт Century Gothic, указываем тег для централизации расположения заголовков-->
+		<h1>
+			<font color="white" face="century gothic">
+				<center>
+					Трисс Меригольд
+				</center>
+		</h1>
+		<h3>
+			<p>
+				<center>
+					" Весёлая Трисс Меригольд с каштановыми волосами, хохочущая по любому поводу и выглядевшая как девчонка. 
+					<br>Он любил ее. И она его тоже "
+				</center>
+			</p>
+		</h3>
+			<p>
+				<b>
+					Трисс Меригольд 
+				</b> 
+					— чародейка, бывшая любовница 
+						<a href="index.html" target="_blank" style="color:#FF4500">
+							<b>
+								Геральта.
+							</b>
+						</a>
+				,а также лучшая подруга 
+					<a href="Yen.html" target="_blank" style="color:#FF4500">
+						<b>
+							Йеннифэр,
+						</b>
+					</a>
+					<a href="Ciri.html" target="_blank" style="color:#FF4500">
+						<b>
+							Цири
+						</b>
+					</a> и 
+					<a href="Witcher.html" target="_blank" style="color:#FF4500" >
+						<b>
+							ведьмаков
+						</b>
+					</a> 
+				из Каэр Морхена. 
+				<br>Одна из самых молодых, но вместе с тем самых талантливых чародеек Севера.
+		<!--Создаем невидимую таблицу для более легкой работы и распределения располодения наших объектов(текста и картинки)-->
 		<!--Создаем рамку для нашей картинки, указываем ёё размер и цвет-->
 		<table>
-		<tr>
-		<td><img src="https://cdnb.artstation.com/p/assets/images/images/016/392/545/large/astor-alexander-triss-2100px.jpg?1551981789" height="500px"></td>
-		<td><h2><center>Биография</center></h2>
-		<p> В этой прекрасной, талантливой волшебнице с каштановыми волосами трудно 
-		<br> было узнать прежнюю Трисс - весёлую, хохочушую по любому поводу и 
-		<br> выглядевшую как девчёнка. Она многого добилась благодаря своим знаниям 
-		<br> и способностям. Что же до ведьмака, то каждый, кому довелось наблюдать за 
-		<br>дружбой Трисс и Геральта, мог легко понять, что этих двоих объединяло многое...
-		<br>И, как известно, старая любовь не ржавеет...
-		<br><br>
-		<h3>Характер<br></h3><p> Трисс является светлым и мягким персонажем, ей не чужды стеснение, преданность,
-		<br> милосердие, сочувствие и сострадание. Трисс всегда жаждет помочь людям, не
-		<br> отказывает в помощи, также Меригольд очень любит людей и детей. Чародейка
-		<br> испытывает нелюбовь лишь к тем, кто пытается воспользоваться ею или открыто льстит,
-		<br>предпочитая рассказывать правду в глаза. Однако, совесть еще долго может заставлять 
-		<br> девушку отводить взгляд от собеседника. С друзьями и близкими Трисс мила и добродушна, 
-		<br>всегда позитивна и жизнерадостна. Ей владеет желание добиться мира и добра для всех вокруг,
-		<br>а особенно – для дорогих для нее людей. Девушке иногда ведом страх, наивность и неуверенность,
-		<br>однако ее самоотверженность с лихвой компенсирует это.</p></font></td>
-		
-		</tr>
-		
+			<tr>
+				<td>
+					<img src="https://cdnb.artstation.com/p/assets/images/images/016/392/545/large/astor-alexander-triss-2100px.jpg?1551981789" height="500px">
+				</td>
+				<td>
+					<h2>
+						<center>
+							Биография
+						</center>
+					</h2>
+					В этой прекрасной, талантливой волшебнице с каштановыми волосами трудно 
+					<br> было узнать прежнюю Трисс - весёлую, хохочушую по любому поводу и 
+					<br> выглядевшую как девчёнка. Она многого добилась благодаря своим знаниям 
+					<br> и способностям. Что же до ведьмака, то каждый, кому довелось наблюдать за 
+					<br>дружбой Трисс и Геральта, мог легко понять, что этих двоих объединяло многое...
+					<br>И, как известно, старая любовь не ржавеет...
+					<br><br>
+					<h3>
+						Характер<br>
+					</h3>
+					Трисс является светлым и мягким персонажем, ей не чужды стеснение, преданность,
+					<br> милосердие, сочувствие и сострадание. Трисс всегда жаждет помочь людям, не
+					<br> отказывает в помощи, также Меригольд очень любит людей и детей. Чародейка
+					<br> испытывает нелюбовь лишь к тем, кто пытается воспользоваться ею или открыто льстит,
+					<br>предпочитая рассказывать правду в глаза. Однако, совесть еще долго может заставлять 
+					<br> девушку отводить взгляд от собеседника. С друзьями и близкими Трисс мила и добродушна, 
+					<br>всегда позитивна и жизнерадостна. Ей владеет желание добиться мира и добра для всех вокруг,
+					<br>а особенно – для дорогих для нее людей. Девушке иногда ведом страх, наивность и неуверенность,
+					<br>однако ее самоотверженность с лихвой компенсирует это.
+		</p>
+			</font>
+				</td>
+			</tr>
 		</table>
-		
 	</body>
 </html>
 
