--- a/Ciri.html
+++ b/Ciri.html
@@ -85,7 +85,9 @@
 					<br>связанное с его жизнью тысячами неразрывных нитей.
 					<br><br>Дар Цири оказался её проклятием, и однажды именно из-за него ей пришлось скрываться ото всех - даже от Геральта.
 					<h3>
-						Старшая Кровь<br>
+						<center>
+							Старшая Кровь<br>
+						</center>
 					</h3>
 					Неоднократно подчеркивается, что в её жилах течет Старшая Кровь (кровь Эльфов), о чём свидетельствуют телосложение
 					<br>и миндалевидные зелёные глаза. Ген, связанный с магическими способностями, передался ей от предков, 
