--- a/Triss.html
+++ b/Triss.html
@@ -77,9 +77,11 @@
 					<br>дружбой Трисс и Геральта, мог легко понять, что этих двоих объединяло многое...
 					<br>И, как известно, старая любовь не ржавеет...
 					<br><br>
-					<h3>
-						Характер<br>
-					</h3>
+						<h3>
+							<center>
+								Характер<br>
+							</center>
+						</h3>
 					Трисс является светлым и мягким персонажем, ей не чужды стеснение, преданность,
 					<br> милосердие, сочувствие и сострадание. Трисс всегда жаждет помочь людям, не
 					<br> отказывает в помощи, также Меригольд очень любит людей и детей. Чародейка
