--- a/Witcher.html
+++ b/Witcher.html
@@ -59,14 +59,21 @@
 					</h2>
 				
 					<h3>
-						Фехтование<br>
+						<center>
+							Фехтование<br>
+						</center>
 					</h3>
 					В первую очередь юные охотники на чудовищ долгие годы упражняются в фехтовании и  
 					<br>работе ног, доводят до автоматизма движения и вырабатывают рефлексы, которые 
 					<br> впоследствии, соединенные с нечеловеческой скоростью, позволяют им выходить 
 					<br>победителями практически из любых схваток. Кроме того, все ведьмаки учатся 
 					<br>акробатическим трюкам, пируэтам и вольтам, которые используют в бою.
-					<h3>Ведьмачьи знаки<br></h3>Ведьмаки владеют т.н. знаками — разновидностью боевой простейшей магии, требующей 
+						<h3>
+							<center>
+								Ведьмачьи знаки<br>
+							</center>
+						</h3>
+					Ведьмаки владеют т.н. знаками — разновидностью боевой простейшей магии, требующей 
 					<br>минимальных способностей для применения, которые появляются у охотников на чудовищ 
 					<br> после Испытаний. Для использования знака ведьмаку достаточно сконцентрироваться и 
 					<br>поставить пальцы в правильную позицию. Известны несколько знаков, причем лишь пять из 
@@ -83,9 +90,11 @@
 							Аксий-воды
 						<img src="https://vignette.wikia.nocookie.net/vedmak/images/8/81/Tw2_sign_yrden.png/revision/latest/scale-to-width-down/30?cb=20140516111211"> 
 							Ирден-пятый элемент.
-					<h3>
-						Иные навыки<br>
-					</h3>
+						<h3>
+							<center>
+								Иные навыки<br>
+							</center>
+						</h3>
 					Для успешной охоты на монстров юным ведьмакам преподают монстрологию, они учат  
 					<br>повадки и особенности многих существ и чудовищ, а также их слабые места. Большинство 
 					<br> ведьмаков – отличные детективы и следопыты,способные по обстановке на местности понять,
