--- a/Yen.html
+++ b/Yen.html
@@ -77,7 +77,9 @@
 				<br>После этого нити их судеб сплелись в запутанный клубок. Отношения их были бурными, с резкими перепадами,
 				<br>  кризисами и разрывами. Эта любовь служит прекрасной иллюстрацией к словам "противоположности притягиваются".
 					<h3>
-						Внешность и характер<br>
+						<center>
+							Внешность и характер<br>
+						</center>
 					</h3>
 				Йеннифэр предстаёт женщиной необыкновенной красоты — красивые фиалковые глаза, роскошные чёрные волосы,
 				<br>закрученные в тугие, ниспадающие на плечи локоны, переливающиеся как перья павлина, стройная фигура.
