--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
 					<br>Ничего странного в этом не было, в Вызиме почти все ходили с оружием, правда, 
 					<br>никто не носил меч на спине, словно лук или колчан. "
 						<h3>
-							Характер<br>
+							<center>
+								Характер<br>
+							</center>
 						</h3>
 						Основными чертами характера ведьмака являются сдержанность, молчаливость, прямолинейность,
 						<br>честность, красноречие, любознательность, рассудительность, скрытность, умеренность во всем и
