--- a/Ciri.html
+++ b/Ciri.html
@@ -51,7 +51,7 @@
 					, воспитывалась какое-то время под руководством 
 					<a href="Triss.html" target="_blank" style="color:#00FA9A">
 						<b>
-							Трисс.
+							Трисс
 						</b>
 					</a> и 
 					<a href="Yen.html" target="_blank" style="color:#00FA9A" >
