--- a/Ciri.html
+++ b/Ciri.html
@@ -43,7 +43,7 @@
 						</b>
 					</a>
 					, приёмная дочь 
-						<a href="index.html" target="_blank" style="color:#00FA9A">
+						<a href="Geralt.html" target="_blank" style="color:#00FA9A">
 							<b>
 								Геральта
 							</b>
