--- a/Triss.html
+++ b/Triss.html
@@ -34,7 +34,7 @@
 					Трисс Меригольд 
 				</b> 
 					— чародейка, бывшая любовница 
-						<a href="index.html" target="_blank" style="color:#FF4500">
+						<a href="Geralt.html" target="_blank" style="color:#FF4500">
 							<b>
 								Геральта.
 							</b>
