--- a/Witcher.html
+++ b/Witcher.html
@@ -26,7 +26,7 @@
 				<center>
 					" —Храбрый, видать, раз два меча навесил.
 					<br> Ты, 
-						<a href="index.html" target="_blank" style="color:#FFD700" >
+						<a href="Geralt.html" target="_blank" style="color:#FFD700" >
 							седой
 						</a>
 					! На кой тебе два меча? Скажешь, кто ты такой есть, или тебе язык ножом развязать?
