--- a/Yen.html
+++ b/Yen.html
@@ -41,7 +41,7 @@
 								ведьмака
 							</b>
 						</a> 
-						<a href="index.html" target="_blank" style="color:#00BFFF">
+						<a href="Geralt.html" target="_blank" style="color:#00BFFF">
 							<b>
 								Геральта,
 							</b>
