--- a/index.html
+++ b/index.html
@@ -3,96 +3,39 @@
 	<head>
 	    <!--Указываем название вкладки-->
 		<title>
-			Geralt of Rivia 
+			JOIN 
 		</title>
 		<!--Указываем фон для страницы-->
-		<!--Создаем рамку для нашей картинки, указываем ёё размер и цвет-->
 		<style>
-    	    body{background-image:url("https://steamcdn-a.akamaihd.net/steamcommunity/public/images/items/292030/34e9759c41ad208c8b701d5116be837da23bbbf0.jpg");} 
-			img {border: 3px solid #FFFFE0;}. 
+    	    body{background-image:url("https://external-preview.redd.it/_B2S-6t6pEu4TMGG9q3ThhMk_FgHwZQ3MCXyq8TF3vg.jpg?auto=webp&s=bfc5ce783a2abcf1a0e881c520af3a487f58ebcc");}
         </style>
 	</head>
 	<body>
-		<!--Используем 2 тега для заголовков разных размеров-->
-		<!--Задаём белый цвет всему тексту и шрифт Century Gothic, указываем тег для централизации расположения заголовков-->
-		<h1>
-			<font color="white" face="century gothic">
-				<center>
-					ГЕРАЛЬТ ИЗ РИВИИ
-				</center></h1>
-		<h3>
-			<p>
-				<center>
-					" Зло — есть зло.
-					<br>Меньшее, большее, среднее — всё едино, пропорции условны, а границы размыты.
-					<br>Но если приходится выбирать между одним злом и другим, я предпочитаю не выбирать вовсе. "— Геральт
-				</center>
-			</p>
-		</h3>
-		<p>
-			<b>
-				Геральт из Ривии
-			</b> 
-				— главный герой книг Анджея Сапковского и серии видеоигр, странствующий 
-					<a href="Witcher.html" target="_blank" style="color:#FFD700">
-						<b>
-							ведьмак
-						</b>
-					</a> — профессиональный охотник на чудовищ, умелый боец, 
-			<br>обладающий некоторыми магическими способностями. В процессе обучения ведьмаки принимают «мутагены», делающие их сильнее, быстрее и дающие возможность
-			<br> принимать действенные, но ядовитые для простых людей алхимические зелья. Имеет романтический интерес к двум чародейкам: 
-				<a href="Yen.html" target="_blank" style="color:#FFD700">
-					<b>
-						Йеннифэр
-					</b>
-				</a> 
-					и 
-				<a href="Triss.html" target="_blank" style="color:#FFD700">
-					<b>
-						Трисс.
-					</b>
-				</a> 
-			<br>А также ему очень дорога его учиница, ставшая ему как дочь - ведьмачка 
-				<a href="Ciri.html" target="_blank" style="color:#FFD700">
-					<b>
-						Цири
-					</b>
-				</a>
-		<!--Создаем невидимую таблицу для более легкой работы и распределения располодения наших объектов(текста и картинки)-->
-		<!--Создаем рамку для нашей картинки, указываем ёё размер и цвет-->
-		<table>
+		<br><br>
+		<!--Создаем невидимую таблицу для более легкой работы и распределения располодения наших объектов-->
+		<table  align="center" width="420px" height="900px">
 			<tr>
 				<td>
-					<img src="https://cdna.artstation.com/p/assets/images/images/016/392/540/large/astor-alexander-geralt-2100px.jpg?1551982033" height="500px">
+		<form action="index2.html" method="" > 
+			Create your account<br>
+			<input  type="text" name="name" placeholder="Login"> <br><br>
+			<input type="password" name="pass" placeholder="Password"><br><br>
+			<input type="radio">Male<br>
+			<input type="radio" >Female<br><br>
+			<input  type="date"> <br><br>
+			<input  type="email" placeholder="Email"> <br><br>
+			<input  type="tel" placeholder="Phone"> <br><br>
+			<input type="checkbox">Russia<br>
+			<input type="checkbox">Kazakhstan<br>
+			<input type="checkbox">Other<br><br><br><br>
+			<button type="submit" >Join</button><br><br>
+			<button type="reset" ">Cancel</button><br><br>
+		</form>
 				</td>
 				<td>
-					<h2>
-						<center>
-							Внешность
-						</center>
-					</h2>
-					Незнакомец не был стар, но волосы у него были почти совершенно белыми. 
-					<br>Под плащом он носил потертую кожаную куртку со шнуровкой у горла и на рукавах.
-					<br> Когда сбросил плащ, стало видно, что на ремне за спиной у него висит меч. 
-					<br>Ничего странного в этом не было, в Вызиме почти все ходили с оружием, правда, 
-					<br>никто не носил меч на спине, словно лук или колчан. "
-						<h3>
-							<center>
-								Характер<br>
-							</center>
-						</h3>
-						Основными чертами характера ведьмака являются сдержанность, молчаливость, прямолинейность,
-						<br>честность, красноречие, любознательность, рассудительность, скрытность, умеренность во всем и
-						<br> способности не терять самообладание в любой ситуации и приспосабливаться к любым условиям. 
-						<br>Также Геральт опытен и практичен, неприхотлив и независим. Кроме того он отличается сильнейшим гуманизмом,
-						<br>хотя и не питает иллюзий об устройстве мира и его обитателях и не наивен. Ведьмак сообразителен, разумен и, 
-						<br>как правило, способен принимать взвешенные и продуманные решения. Несмотря на склонность к бродяжничеству
-						<br>и неспособность долго жить в одном месте, что связано как с чертами характера, так и с образом жизни, 
-						<br>Геральт высоко ценит дом и удобства, не отказываясь от них при возможности.
-						<br>Тем не менее, несмотря на всю свою дальновидность и определенную степень мудрости,
-						<br>Геральт остёр на язык, грубоват, саркастичен и вообще обладает специфическим чувством юмора.
-		</p>
-			</font>
+					<br><br><br><br><br><br>
+					<p>Write about you</p>
+					<textarea cols="30" rows="10"></textarea><br><br>
 				</td>
 			</tr>
 		</table>
