--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
 		<table  align="center" width="420px" height="650px">
 			<tr>
 				<td>
-		<form action="" method="post" > 
+		<form action="" method="" > 
 			<select name="name" onchange="location.href = this.value">
 				<option disabled selected>Choose one article</option>
 				<option value="Geralt.html" >Geralt</option>
