--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<style>
     	    body{background-image:url("https://external-preview.redd.it/_B2S-6t6pEu4TMGG9q3ThhMk_FgHwZQ3MCXyq8TF3vg.jpg?auto=webp&s=bfc5ce783a2abcf1a0e881c520af3a487f58ebcc");}
         </style>
+		<script type="text/javascript" src="jquery-3.5.1.min.js"></script>
+		<script type="text/javascript" src="html.js"></script>
 	</head>
 	<body>
 		<br><br>
@@ -16,19 +18,20 @@
 		<table  align="center" width="420px" height="900px">
 			<tr>
 				<td>
-		<form action="index2.html" method="" > 
+		<form action="index2.html" method=""> 
 			Create your account<br>
-			<input  type="text" name="name" placeholder="Login"> <br><br>
-			<input type="password" name="pass" placeholder="Password"><br><br>
+			<input  type="text" id="log" name="name" placeholder="Login"> <br><br>
+			<input type="password" id="pass" name="pass" placeholder="Password"><br>
+			<div id="result"></div><br>
 			<input type="radio">Male<br>
 			<input type="radio" >Female<br><br>
 			<input  type="date"> <br><br>
-			<input  type="email" placeholder="Email"> <br><br>
+			<input  type="email" id="email" placeholder="Email"> <br><br>
 			<input  type="tel" placeholder="Phone"> <br><br>
 			<input type="checkbox">Russia<br>
 			<input type="checkbox">Kazakhstan<br>
 			<input type="checkbox">Other<br><br><br><br>
-			<button type="submit" >Join</button><br><br>
+			<button type="submit" id="b1">Join</button><br><br>
 			<button type="reset" ">Cancel</button><br><br>
 		</form>
 				</td>
