--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 		<table  align="center" width="420px" height="900px">
 			<tr>
 				<td>
-		<form action="index2.html" method=""> 
+		<form action="action.php" method="POST"> 
 			Create your account<br>
-			<input  type="text" id="log" name="name" placeholder="Login"> <br><br>
+			<input  type="text" id="log" name="login" placeholder="Login"> <br><br>
 			<input type="password" id="pass" name="pass" placeholder="Password"><br>
 			<div id="result"></div><br>
 			<input type="radio">Male<br>
