--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<table  align="center" width="420px" height="900px">
 			<tr>
 				<td>
-		<form action="action.php" method="POST"> 
+		<form action="index.php" method="post"> 
 			Create your account<br>
 			<input  type="text" id="log" name="login" placeholder="Login"> <br><br>
 			<input type="password" id="pass" name="pass" placeholder="Password"><br>
